# opinionated-fastapi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish-docs.yml  publish-package.yml  test-before-merge.yml
0.0.1/: 404.html  index.html  sitemap.xml
0.0.1/contributing/: index.html
0.0.1/fastapi-admin/: index.html
0.0.1/getting-started/: index.html
0.0.1/license/: index.html
0.0.1/opinionated-fastapi/: index.html
0.0.1/release-notes/: index.html
0.0.1/search/: search_index.json
docs/: fastapi-admin.md  index.md  opinionated-fastapi.md
latest/contributing/: index.html
latest/fastapi-admin/: index.html
latest/opinionated-fastapi/: index.html
latest/release-notes/: index.html
opinionated/fastapi/: __init__.py  app.py  bootstrap.py  commands.py  config.py  db.py  default_settings.py  migrations.py  scheduler.py  sentry.py  tasks.py
opinionated/fastapi/alembic/: env.py
